# memo-esp

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  TRANSCRIPTION_SETUP.md  USB_TROUBLESHOOTING.md  check_usb.sh  fix_usb_enumeration.sh  platformio.ini  requirements.txt  setup_whisper.sh  simple_server.py  test_server.py  transcription_server.py
include/: config.h
src/: main.cpp  main.rs
static/: index.html
transcripts/: esp32-dev-01_20260119_122531_521451.json  esp32-dev-01_20260119_122551_079174.json  esp32-dev-01_20260119_122554_605601.json  esp32-dev-01_20260119_122557_660337.json  esp32-dev-01_20260119_122600_647333.json  esp32-dev-01_20260119_122600_647333.txt  esp32-dev-01_20260119_122603_291686.json  esp32-dev-01_20260119_122605_308263.json  esp32-dev-01_20260119_122605_308263.txt  esp32-dev-01_20260119_122609_287301.json  esp32-dev-01_20260119_122612_137090.json  esp32-dev-01_20260119_122612_137090.txt  esp32-dev-01_20260119_122615_242942.json  esp32-dev-01_20260119_122619_253563.json  esp32-dev-01_20260119_122622_499664.json  esp32-dev-01_20260119_122624_239125.json  esp32-dev-01_20260119_122626_286956.json  esp32-dev-01_20260119_122629_641957.json  esp32-dev-01_20260119_122629_641957.txt  esp32-dev-01_20260119_122632_957806.json  esp32-dev-01_20260119_122632_957806.txt  esp32-dev-01_20260119_122637_203338.json  esp32-dev-01_20260119_122640_529622.json  esp32-dev-01_20260119_122643_450017.json  esp32-dev-01_20260119_122646_592816.json  esp32-dev-01_20260119_122651_773084.json  esp32-dev-01_20260119_130333.json  esp32-dev-01_20260119_130333.txt  (+36 more)
(+4 files in other folders)
