[package]
name = "memo-esp-server"
version = "0.1.0"
edition = "2021"
authors = ["Memo Team"]

[[bin]]
name = "memo-esp-server"
path = "src/main.rs"

[dependencies]
# memo-stt for transcription
memo-stt = { path = "../memo-stt" }

# HTTP server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
tokio-stream = "0.1"

# Error handling
anyhow = "1.0"
